--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "dev": "nodemon server/index.js",
+    "dev:server": "nodemon server/index.js",
+    "dev:client": "vue-cli-service serve",
+    "build:client": "vue-cli-service build",
+    "lint:vue-cli": "vue-cli-service lint",
     "lint": "eslint ."
   },
   "author": "",
@@ -14,7 +17,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.5.4"
+    "mongodb": "^3.5.4",
+    "axios": "^0.19.2",
+    "bulma": "^0.8.0",
+    "core-js": "^3.6.4",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -24,6 +31,12 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.1.2",
+    "babel-eslint": "^10.0.3",
+    "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-eslint": "~4.2.0",
+    "@vue/cli-service": "~4.2.0",
+    "vue-template-compiler": "^2.6.11",
     "nodemon": "^2.0.2"
   }
 }
