--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongodb": "^3.5.4",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
+    "cors": "^2.8.5",
+    "date-fns": "^2.11.1",
+    "express": "^4.17.1",
+    "mongodb": "^3.5.4",
     "vue": "^2.6.11"
   },
   "devDependencies": {
