--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.11.1",
     "express": "^4.17.1",
     "mongodb": "^3.5.4",
+    "mongoose": "^5.9.7",
     "vue": "^2.6.11"
   },
   "devDependencies": {
