--- a/package.json
+++ b/package.json
@@ -2,31 +2,35 @@
   "name": "note-me",
   "version": "1.0.0",
   "description": "Full stack web app for taking notes.",
-  "scripts": {
-    "start": "node server/index.js",
-    "dev:server": "nodemon server/index.js",
-    "dev:client": "vue-cli-service serve",
-    "build:client": "vue-cli-service build",
-    "lint:vue-cli": "vue-cli-service lint",
-    "lint": "eslint ."
-  },
   "author": "",
-  "license": "MIT",
+  "scripts": {
+    "lint": "eslint .",
+    "build:client": "vue-cli-service build",
+    "dev:client": "vue-cli-service serve",
+    "dev:server": "nodemon server/index.js",
+    "lint:vue-cli": "vue-cli-service lint",
+    "start": "node server/index.js"
+  },
   "dependencies": {
+    "@mdi/font": "^5.8.55",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
-    "bulma": "^0.8.0",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "date-fns": "^2.11.1",
     "express": "^4.17.1",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.7",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@extensionengine/eslint-config": "^1.1.0",
     "@extensionengine/stylelint-config": "^1.1.1",
+    "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-eslint": "~4.2.0",
+    "@vue/cli-service": "~4.2.0",
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-semistandard": "^15.0.0",
     "eslint-config-standard": "^14.1.0",
@@ -37,15 +41,13 @@
     "eslint-plugin-require-sort": "^1.1.0",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.1.2",
-    "babel-eslint": "^10.0.3",
+    "nodemon": "^2.0.2",
     "stylelint": "^13.1.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.0.0",
     "stylelint-scss": "^3.14.2",
-    "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-service": "~4.2.0",
-    "vue-template-compiler": "^2.6.11",
-    "nodemon": "^2.0.2"
-  }
+    "vue-cli-plugin-vuetify": "~2.0.9",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "license": "MIT"
 }
